# 2d-block-tree

./: .gitignore  CMakeLists.txt  README.md  clean.sh  compile.sh  new.txt  old.txt  web-graph
datasets/images/: 01.bin.adj.k2t  01.bin.adj.k2t.html  01.bin.adj.k2t.json  01.bin.adj_128.2dbt  01.bin.adj_128.2dbt.cl  01.bin.adj_128.2dbt.cl.html  01.bin.adj_128.2dbt.cl.json  01.bin.adj_128.2dbt.html  01.bin.adj_128.2dbt.json  L1_0a085e1194f37d52484b48775e66f5d0.adj  L1_0a085e1194f37d52484b48775e66f5d0.adj_128.2dbt  L1_0a085e1194f37d52484b48775e66f5d0.adj_128.2dbt.html  L1_0a085e1194f37d52484b48775e66f5d0.adj_128.2dbt.json  L1_0a2375339b87dfb63da661be1e634011.adj  L1_0a2375339b87dfb63da661be1e634011.adj_128.2dbt  L1_0a2375339b87dfb63da661be1e634011.adj_128.2dbt.cl  L1_0a2375339b87dfb63da661be1e634011.adj_128.2dbt.cl.html  L1_0a2375339b87dfb63da661be1e634011.adj_128.2dbt.cl.json  L1_0a2375339b87dfb63da661be1e634011.adj_128.2dbt.html  L1_0a2375339b87dfb63da661be1e634011.adj_128.2dbt.json  L1_0aa638b81eb31b4b0e78fefb7bfdd316.adj.k2t  L1_0aa638b81eb31b4b0e78fefb7bfdd316.adj.k2t.html  L1_0aa638b81eb31b4b0e78fefb7bfdd316.adj.k2t.json  L1_0aa638b81eb31b4b0e78fefb7bfdd316.adj_128.2dbt  L1_0aa638b81eb31b4b0e78fefb7bfdd316.adj_128.2dbt.html  L1_0aa638b81eb31b4b0e78fefb7bfdd316.adj_128.2dbt.json  L1_0ac67f978e550e5af400e41fd94dd5a5.adj.k2t  L1_0ac67f978e550e5af400e41fd94dd5a5.adj.k2t.html  L1_0ac67f978e550e5af400e41fd94dd5a5.adj.k2t.json  L1_0ac67f978e550e5af400e41fd94dd5a5.adj_128.2dbt  L1_0ac67f978e550e5af400e41fd94dd5a5.adj_128.2dbt.html  L1_0ac67f978e550e5af400e41fd94dd5a5.adj_128.2dbt.json  L1_0b78371ee9612568592e8de5e0fb4891.adj  L1_0b78371ee9612568592e8de5e0fb4891.adj.k2t  L1_0b78371ee9612568592e8de5e0fb4891.adj.k2t.html  L1_0b78371ee9612568592e8de5e0fb4891.adj.k2t.json  L1_0b78371ee9612568592e8de5e0fb4891.adj_128.2dbt  L1_0b78371ee9612568592e8de5e0fb4891.adj_128.2dbt.cl  L1_0b78371ee9612568592e8de5e0fb4891.adj_128.2dbt.cl.html  L1_0b78371ee9612568592e8de5e0fb4891.adj_128.2dbt.cl.json  (+22 more)
include/: adjacency_list_helper.hpp  alternative_code.hpp  bit_dictionary.hpp  bithacks.hpp  block_tree.hpp  block_tree_algorithm_helper.hpp  block_tree_algorithm_helper_v2.hpp  block_tree_basic.hpp  block_tree_comp_leaves.hpp  block_tree_comp_ones.hpp  block_tree_comp_ones_access.hpp  block_tree_comp_ones_v2.hpp  block_tree_dag.hpp  block_tree_dag_comp_leaves.hpp  block_tree_double_dag.hpp  block_tree_double_hybrid.hpp  block_tree_double_hybrid_skipping_block.hpp  block_tree_double_hybrid_skipping_block_V2.hpp  block_tree_hybrid.hpp  block_tree_hybrid_subtree.hpp  block_tree_intersection_lists.hpp  block_tree_raster.hpp  block_tree_raster_comp_leaves.hpp  block_tree_result_util.hpp  block_tree_skip_levels.hpp  dac_vector.hpp  dataset_reader.hpp  experiment_setup.hpp  file_util.hpp  hash_table_chainning.hpp  hash_table_chainning_multiple.hpp  hash_table_chainning_multiple_v2.hpp  heap.hpp  heap_4ary.hpp  heap_4ary_v2.hpp  heap_v2.hpp  intersection_lists.hpp  k2_acum.hpp  k2_tree.hpp  k2_tree_compression_leaves.hpp  (+24 more)
raster/: eua_join1X1_00.0.bin_256.2dbt  eua_join1X1_01.0.bin_256.2dbt  eua_join1X1_02.0.bin_256.2dbt  eua_join1X1_03.0.bin_256.2dbt  eua_join1X1_04.0.bin_256.2dbt  eua_join1X1_10.0.bin_256.2dbt  eua_join1X1_11.0.bin_256.2dbt
src/: algorithm.cpp  algorithm_v2.cpp  block_tree.cpp  block_tree_skip_levels.cpp  build_k2tree.cpp  build_k2tree_png.cpp  build_k2tree_raster.cpp  build_k2tree_rdf.cpp  build_k2tree_samatrix.cpp  build_k2tree_v1.cpp  build_png.cpp  build_png_comp_leaves.cpp  build_raster.cpp  build_raster_comp_leaves.cpp  build_raster_dag.cpp  build_raster_dag_comp_leaves.cpp  build_raster_log.cpp  build_raster_min_max.cpp  build_rdf.cpp  build_rdf_parallel.cpp  build_samatrix.cpp  build_samatrix_comp_leaves.cpp  build_webgraph.cpp  build_webgraph_comp_leaves.cpp  build_webgraph_dag.cpp  check_blocks.cpp  display.cpp  entropy.cpp  experiment_files.cpp  fixing_error.cpp  hash_table.cpp  info_block_tree.cpp  karp_rabin.cpp  karp_rabin_v2.cpp  load_webgraph.cpp  main.cpp  prepare_movies.cpp  raster_queries.cpp  region_files.cpp  roll_replacement.cpp  (+31 more)
test/: adjacency_lists_test.cpp  algorithm_test.cpp  block_tree_double_hybrid_skipping_block_test.cpp  block_tree_double_hybrid_test.cpp  block_tree_hybrid_test.cpp  block_tree_skip_levels_test.cpp  block_tree_test.cpp  build_k2_tree_test.cpp  heap_4ary_test.cpp  karp_rabin_test.cpp  proba.cpp  test_bt.cpp
